--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="SubmitYe">Submit Your Engine</string>
     <string name="Right">Right</string>
     <string name="Left">Left</string>
+    <string name="Character">X</string>
+    <string name="Charcterssss">Y</string>
 </resources>
